Updated Jupyter notebooks with new model testing and training code.

--- a/Python files/models testing.ipynb
+++ b/Python files/models testing.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b5bb6e23",
+   "metadata": {},
+   "source": [
+    "# Segmnetation Model Testing\n",
+    "This notebook aims to test various segmentation models to determine the best one for this project. Most of these models are available from the Segmentation Models - PyTorch (SMP) library. All models use the same transfer learning-based encoder (ResNet-101), as exploring various encoders is not feasible within the project's timeframe. Additionally, ResNet-101 has proven to be reliable and provides optimal results, as mentioned in the report.\n",
+    "\n",
+    "A baseline model is created that does not use the ResNet-101 encoder, in order to highlight the significance of using a transfer learning-based encoder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bf9b2592",
